Updated to latest main version
- Translated some new things
- Fixed minor things

--- a/Translations/German/text-eventCity-change.xml
+++ b/Translations/German/text-eventCity-change.xml
@@ -10,7 +10,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTCITY_CIVICS_BOOM</zType>
-		<Translation>{CITY} erlbete einen Anstieg in der Verwaltung</Translation>
+		<Translation>{CITY} erlebte einen Anstieg in der Verwaltung</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTCITY_TRAINING_BOOM</zType>
@@ -22,7 +22,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTCITY_MONEY_BOOM</zType>
-		<Translation>{CITY} erlbete einen Anstieg in der Wirtschafts</Translation>
+		<Translation>{CITY} erlebte einen Anstieg in der Wirtschafts</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTCITY_ORDERS_BOOM</zType>
