--- a/Translations/German/text-mission-change.xml
+++ b/Translations/German/text-mission-change.xml
@@ -331,7 +331,7 @@
 		<Translation>Verhaften</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_MISSION_CAPTURED_RANSOM</zType>
+		<zType>TEXT_MISSION_PAY_RANSOM</zType>
 		<Translation>Bezahle Lösegeld</Translation>
 	</Entry>
 	<Entry>
