--- a/Translations/German/text-helptext-change.xml
+++ b/Translations/German/text-helptext-change.xml
@@ -55,6 +55,26 @@
 	</Entry> 
 	<!--General-->
 	<Entry>
+		<zType>TEXT_HELPTEXT_INDENT</zType>
+		<Translation>   {0}</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HELPTEXT_NEWLINE</zType>
+		<Translation><![CDATA[<br>{0}]]></Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HELPTEXT_NEWLINE_CONCAT_TWO</zType>
+		<Translation><![CDATA[{0}<br>{1}]]></Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HELPTEXT_DIVIDER_LINE</zType>
+		<Translation><![CDATA[<style=Line></style>]]></Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HELPTEXT_CONCAT_TWO</zType>
+		<Translation>{0}{1}</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_HELPTEXT_CONCAT_TWO</zType>
 		<Translation>{0}{1}</Translation>
 	</Entry>
@@ -93,6 +113,10 @@
 	<Entry>
 		<zType>TEXT_HELPTEXT_ENTRY_COLON_SPACE_TWO</zType>
 		<Translation>{0}: {1}</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HELPTEXT_ENTRY_COLON_SPACE_ONE_ONE</zType>
+		<Translation>{0}: {1} {2}</Translation>
 	</Entry>
 	<Entry>	
 		<zType>TEXT_HELPTEXT_COMMA_DATA_TWO</zType>
@@ -145,6 +169,14 @@
 	<Entry>
 		<zType>TEXT_HELPTEXT_CONCAT_COLON_FRACTION</zType>
 		<Translation>{0}: {1}/{2}</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HELPTEXT_INDENTED_BULLET_LIST_BUILDER_FIRST</zType>
+		<Translation>   icon(bullet){0}</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HELPTEXT_INDENTED_BULLET_LIST_BUILDER</zType>
+		<Translation><![CDATA[{0}<br>   icon(bullet){1}]]></Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HELPTEXT_BULLET_LIST_BUILDER_FIRST</zType>
@@ -1054,6 +1086,10 @@
 		<Translation>Hofbeamter:</Translation>
 	</Entry>
   <Entry>
+		<zType>TEXT_HELPTEXT_WIDGET_TABPANEL_OTHER_CHARACTERS</zType>
+		<Translation>Andere Charaktere:</Translation>
+	</Entry>
+	<Entry>
     <zType>TEXT_HELPTEXT_WIDGET_TABPANEL_NO_CONTACTS</zType>
     <Translation>Keine Nationen oder Stämme gefunden</Translation>
   </Entry>
@@ -1078,6 +1114,22 @@
 		<Translation>Klicken zum anzeigen der Erbschaft</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_HELPTEXT_WIDGET_NO_CANDIDATES</zType>
+		<Translation>Keine Kandidaten verfügbar</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HELPTEXT_WIDGET_CANDIDATES</zType>
+		<Translation>Kandidaten verfügbar:</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HELPTEXT_WIDGET_CANDIDATES_TUTORS</zType>
+		<Translation>Kandidaten verfügbar (Lehrer):</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HELPTEXT_WIDGET_CANDIDATES_JOBS</zType>
+		<Translation>Kandidaten verfügbar (Stellen):</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_HELPTEXT_WIDGET_ADD_GENERAL_LEADS_UNIT</zType>
 		<Translation>{0_character} führt die {1_unit}</Translation>
 	</Entry>
@@ -1088,10 +1140,6 @@
 	<Entry>
 		<zType>TEXT_HELPTEXT_WIDGET_ADD_GENERAL_NO_CANDIDATES</zType>
 		<Translation>Keine Kandidaten verfügbar</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_HELPTEXT_WIDGET_ADD_GENERAL_CANDIDATES</zType>
-		<Translation>Verfügbare Kandidaten</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HELPTEXT_WIDGET_ADD_GENERAL_MIN_UNIT_LEVEL</zType>
@@ -1364,7 +1412,15 @@ sich in der Einheits Bewegungsreichtweite bewegen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HELPTEXT_WIDGET_CANCEL_IMPROVEMENT_REFUNDS</zType>
-		<Translation>Zurückerstattung {0_list}</Translation>
+		<Translation>Zurückerstattungen {0_list}</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HELPTEXT_WIDGET_CANCEL_UNIT_QUEUE</zType>
+		<Translation>Breche die Warteschlange ab</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HELPTEXT_WIDGET_CANCEL_UNIT_QUEUE_SINGLE</zType>
+		<Translation><![CDATA[Halte <TEXT_HOTKEY_SHIFT> um die letzte Aktion abzubrechen]]></Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HELPTEXT_WIDGET_REMOVE_VEGETATION</zType>
@@ -1844,7 +1900,7 @@ sich in der Einheits Bewegungsreichtweite bewegen</Translation>
 	<Entry>
 		<zType>TEXT_HELPTEXT_LINK_HELP_DIPLOMACY_PEACE_BARBARIAN</zType>
 		<Translation>
-Ihr lönnt euch nicht gegenseitig angreifen.
+Ihr könnt euch nicht gegenseitig angreifen.
 Frieden dauert so lange bis die derzeitigen Herrschaft des Oberhauptes endet.
 Ihre Einheiten erklären dir unwahrscheinlicher Krieg oder schicken Plünderer gegen dich.
 Sie können dein Gebiet betreten sich in deinem Gebiet heilen.</Translation>
@@ -1852,7 +1908,7 @@ Sie können dein Gebiet betreten sich in deinem Gebiet heilen.</Translation>
 	<Entry>
 		<zType>TEXT_HELPTEXT_LINK_HELP_DIPLOMACY_PEACE_PLAYER</zType>
 		<Translation>
-Ihr lönnt euch nicht gegenseitig angreifen.
+Ihr könnt euch nicht gegenseitig angreifen.
 Sie erklären dir unwahrscheinlicher den Krieg.
 Ihr könnt euch beide heilen und euere Gebiete betreten.</Translation>
 	</Entry>
@@ -2488,6 +2544,10 @@ Ihr könnt euch beide heilen und euere Gebiete betreten.</Translation>
 		<Translation>{0} von angrenzend {1}</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_HELPTEXT_YIELD_FROM_ADJACENT_RESOURCE</zType>
+		<Translation>{0} von angrenzenden Ressourcen</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_HELPTEXT_YIELD_PERCENT_FROM</zType>
 		<Translation>x{0}% von {1}</Translation>
 	</Entry>
@@ -2907,10 +2967,6 @@ Ihr könnt euch beide heilen und euere Gebiete betreten.</Translation>
 		<Translation>{0_value} Verbesserungskosten</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_HELPTEXT_EFFECT_CITY_HELP_NO_YIELDS_ADJACENT_URBAN_COST</zType>
-		<Translation>{0_value} Nachbarschafts Städtische Verbesserungs-Klassen Kosten</Translation>
-	</Entry>
-	<Entry>
 		<zType>TEXT_HELPTEXT_EFFECT_CITY_HELP_NO_YIELDS_SPECIALIST_COST</zType>
 		<Translation>{0_value} Spezialst Ressourcenkosten</Translation>
 	</Entry>
@@ -3149,6 +3205,10 @@ Ihr könnt euch beide heilen und euere Gebiete betreten.</Translation>
 		<Translation>Angrenzenden {0,2_improvementList}: {1_value}</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_HELPTEXT_IMPROVEMENT_HELP_FOR_ADJACENT_IMPROVEMENT_MODIFIER</zType>
+		<Translation>{1_value} für Angrenzende {0,2_improvementList}</Translation>
+	</Entry>
+	<Entry>
 		<zType>TEXT_HELPTEXT_IMPROVEMENT_HELP_HEALS_UNIT</zType>
 		<Translation>Heilt {0_value} HP für {1_idle} Einheiten</Translation>
 	</Entry>
@@ -3191,6 +3251,10 @@ Ihr könnt euch beide heilen und euere Gebiete betreten.</Translation>
 	<Entry>
 		<zType>TEXT_HELPTEXT_IMPROVEMENT_HELP_YIELDS_PER_YEAR</zType>
 		<Translation>{0_yields} pro Jahr</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HELPTEXT_IMPROVEMENT_HELP_YIELDS_ADJACENT_RESOURCES</zType>
+		<Translation>Angrenzende Ressourcen: {0_yields} pro Jahr</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HELPTEXT_IMPROVEMENT_HELP_BONUS_ALL_CITIES</zType>
@@ -3472,6 +3536,10 @@ Ihr könnt euch beide heilen und euere Gebiete betreten.</Translation>
 		<Translation>Entsperre Projekt (in {0_capital}): {1_project}</Translation>
 	</Entry>
 	<!--FamilyClass Help-->
+	<Entry>
+		<zType>TEXT_HELPTEXT_FAMILY_CLASS_FAMILY_UNITS_BULLET_ITEM</zType>
+		<Translation>icon(bullet)[Familien Einheiten] {LISTE}</Translation>
+	</Entry>
 	<Entry>
 		<zType>TEXT_HELPTEXT_FAMILY_CLASS_NATIONS_WITH_CLASS</zType>
 		<Translation>Staaten mit dieser Familien-Klasse:</Translation>
@@ -4558,8 +4626,8 @@ Ihr könnt euch beide heilen und euere Gebiete betreten.</Translation>
 		<Translation>Verbessere zu {0_improvement}</Translation>
 	</Entry>
 	<Entry>
-		<zType>TEXT_HELPTEXT_TILE_CANCEL_BUTTON</zType>
-		<Translation>Abbrechen {0_improvement}</Translation>
+		<zType>TEXT_HELPTEXT_TILE_CANCEL_UNIT_QUEUE_BUTTON</zType>
+		<Translation>Breche Warteschlange ab</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HELPTEXT_TILE_FOUND_CAPITAL_BUTTON</zType>
@@ -4588,6 +4656,18 @@ Ihr könnt euch beide heilen und euere Gebiete betreten.</Translation>
 	<Entry>
 		<zType>TEXT_HELPTEXT_TILE_ADD_GENERAL_BUTTON</zType>
 		<Translation>Erstelle Feldherr</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HELPTEXT_TILE_ADD_GENERAL_BUTTON_ONE</zType>
+		<Translation>Füge Feldherr hinzu ({0})</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HELPTEXT_TILE_ADD_GENERAL_BUTTON_TWO</zType>
+		<Translation>Füge Feldherr hinzu ({0}, {1})</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HELPTEXT_TILE_ADD_GENERAL_BUTTON_THREE</zType>
+		<Translation>Füge Feldherr hinzu ({0}, {1}, {2})</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HELPTEXT_TILE_RELEASE_GENERAL_BUTTON</zType>
@@ -5023,14 +5103,6 @@ Ihr könnt euch beide heilen und euere Gebiete betreten.</Translation>
 	<Entry>
 		<zType>TEXT_HELPTEXT_CHOOSE_GOVERNOR</zType>
 		<Translation>Wähle Stadthalter für {0_city}</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_HELPTEXT_CHOOSE_GOVERNOR_NO_CANDIDATES</zType>
-		<Translation>Kein Stadthalter Kandidat ist verfügbar</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_HELPTEXT_CHOOSE_GOVERNOR_AVAILABLE_CANDIDATES</zType>
-		<Translation>Kandidat(en) verfügbar:</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HELPTEXT_MAKE_GOVERNOR</zType>
