--- a/Translations/German/text-game-change.xml
+++ b/Translations/German/text-game-change.xml
@@ -27,7 +27,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_GAME_BARBARIANS_NEW_DIPLOMACY</zType>
-		<Translation>Du hast nun {0_newDiplomacy} mit den {1_barbarians}.</Translation>
+		<Translation>{0_team} hat nun {1_newDiplomacy} mit den {2_barbarians}.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_GAME_BARBARIANS_DIPLOMACY_LOG_DATA</zType>
