another tutor fix

--- a/Translations/German/text-game-change.xml
+++ b/Translations/German/text-game-change.xml
@@ -179,7 +179,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_GAME_CHARACTER_TUTORS_CHILD_VERB</zType>
-		<Translation>Lehrer</Translation>
+		<Translation>Unterrichtet</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_GAME_CHARACTER_RATING_CHANGE</zType>
