changed Prüfung to Forschung
reverted back to Musaeum (its not a typo!)

--- a/Translations/German/text-eventStoryTitle-change.xml
+++ b/Translations/German/text-eventStoryTitle-change.xml
@@ -3659,7 +3659,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_WONDER_MUSAEUM_TITLE</zType>
-		<Translation>Das Museum in Alexandria</Translation>
+		<Translation>Das Musaeum in Alexandria</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTSTORY_WONDER_CIRCUS_MAXIMUS_TITLE</zType>
