--- a/Translations/German/text-improvement-change.xml
+++ b/Translations/German/text-improvement-change.xml
@@ -417,7 +417,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENT_MUSAEUM</zType>
-		<Translation>Das Museum in Alexandria</Translation>
+		<Translation>Das Musaeum in Alexandria</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_IMPROVEMENT_CIRCUS_MAXIMUS</zType>
