--- a/Translations/German/text-project-change.xml
+++ b/Translations/German/text-project-change.xml
@@ -117,23 +117,23 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_INQUIRY</zType>
-		<Translation>Prüfung~eine Prüfung~Prüfungen</Translation>
+		<Translation>Forschung~eine Forschung~Forschungen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_INQUIRY_1</zType>
-		<Translation>Prüfung I~eine Prüfung I~Prüfungen I</Translation>
+		<Translation>Forschung I~eine Forschung I~Forschungen I</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_INQUIRY_2</zType>
-		<Translation>Prüfung II~eine Prüfung II~Prüfungen II</Translation>
+		<Translation>Forschung II~eine Forschung II~Forschungen II</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_INQUIRY_3</zType>
-		<Translation>Prüfung III~eine Prüfung III~Prüfungen III</Translation>
+		<Translation>Forschung III~eine Forschung III~Forschungen III</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_INQUIRY_4</zType>
-		<Translation>Prüfung IV~eine Prüfung IV~Prüfungen IV</Translation>
+		<Translation>Forschung IV~eine Forschung IV~Forschungen IV</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PROJECT_HUNT</zType>
