--- a/Translations/German/text-effectCity-change.xml
+++ b/Translations/German/text-effectCity-change.xml
@@ -376,11 +376,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_IMPROVEMENT_MUSAEUM</zType>
-		<Translation>Das Museum in Alexandria</Translation>
+		<Translation>Das Musaeum in Alexandria</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_IMPROVEMENT_MUSAEUM_ALL</zType>
-		<Translation>Das Museum in Alexandria</Translation>
+		<Translation>Das Musaeum in Alexandria</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EFFECTCITY_IMPROVEMENT_CIRCUS_MAXIMUS_ALL</zType>
