--- a/Translations/German/text-infos-change.xml
+++ b/Translations/German/text-infos-change.xml
@@ -910,7 +910,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_GOAL_MUSAEUM</zType>
-		<Translation>Kontrolliere Das Museum in Alexandria</Translation>
+		<Translation>Kontrolliere Das Musaeum in Alexandria</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_GOAL_CIRCUS_MAXIMUS</zType>
